@@ -1,3 +1,5 @@
+	* made UPnP code to avoid using select_reactor (to work around an issue on windows in boost.asio < 1.80)
+
 1.2.17 released
 
 	* fixed tracker connections spinning when hostname lookups stall
